src/objects/AMS_Accreditation_Organization__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Code__c</fullName>
        <label>Air Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipName>AMS_Acreditation_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>AMS Accreditation Organizations</relationshipLabel>
        <relationshipName>AMS_Accreditation_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AMS Accreditation Organization</label>
    <nameField>
        <label>Accreditation Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMS Accreditation Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>